Fixing alignment of institutions heirarchy list and also the missing folder icons on customizations.

--- a/app/assets/stylesheets/ui.css
+++ b/app/assets/stylesheets/ui.css
@@ -139,11 +139,15 @@ li.nested_requirements ul {
 .institutions {
 	margin: 10px 20px 20px; }
 .institution {
-	margin-bottom: 10px; }
+	margin-bottom: 8px; }
+.institutions .institution span.icon {
+  vertical-align: top;
+}
 .nested_institutions {
-	margin-left: 35px; }
+	margin-left: 25px; }
 .institution a {
-	padding-left: 22px;
+  display: inline-block;
+  padding: 2px 0 0 10px;
 	position: relative; }
 
 
